# PhotoShare

./: .env  .gitignore  LICENSE  README.md  example.env  genindex.html  index.html  main.py  procfile  pyproject.toml  requirements.txt  searchindex.js  test.db  test.py
docs/source/: conf.py
html/: .buildinfo
html/_sources/: index.rst.txt
migrations/: env.py
migrations/versions/: 02050b256105_init.py  0208599a522a_ratings_basicv4.py  085403cce38e_ratings_basicv3.py  12b9e9f473e4_tr_url.py  2b012670335f_add_done_fields.py  2d4eed0506a5_create_avg_for_rating.py  51bc812335a6_remove_done_from_hashtag.py  543a9f0146ba_model_text.py  547561c5e194_create_avg_for_rating.py  5997d1478345_increase_url_length.py  680fb28a8181_init.py  6e8308e59b8f_add_comments_and_blacklist.py  7e20bdd26fb9_mdl_tr_url.py  82eedcfb8c41_post_public_id.py  8808e61e1fac_5_add_user_by_default.py  8bd91d494465_upgr_mdl_tr_url.py  9467ecb82664_change_back_to_url.py  9c76efa26fd1_ratings_basic.py  b54242f21dac_ratings_basic.py  c51f72cc186d_transform_url.py  c5f72f08ba30_create_blacklist.py  cab5ce5db318_ratings_basicv5.py  cb828b4b07dc_comments_basic.py  cedcc55fad73_add_roles.py  d11c46627ffb_model_binary.py  d9ffa4f40725_tr_url.py  e1d6767e05ca_create_avg_for_rating.py  e4ed89c59053_initial_models.py  f47989234269_model_text.py  f75b13b9b162_posts_and_hashtag.py  fadcbd6c63e2_change_default_time.py  fb0288045c5c_add_users.py
src/: main.py  schemas.py  tramsform_schemas.py
src/conf/: config.py  messages.py
src/configurations/: config.py
src/database/: connect_db.py  models.py
src/repository/: comments.py  hashtags.py  posts.py  ratings.py  transform_post.py  users.py
src/routes/: auth.py  comments.py  hashtags.py  posts.py  ratings.py  transform_post.py  users.py
src/services/: auth.py  email.py  roles.py
tests/: conftest.py  test_repository_comments.py  test_repository_hashtags.py  test_repository_posts.py  test_repository_ratings.py  test_repository_transform_post.py  test_repository_users.py  test_route_auth.py  test_route_comments.py  test_route_hashtags.py  test_route_posts.py  test_route_ratings.py  test_route_transform_post.py  test_route_users.py  tests_route_comments.py  tests_route_ratings.py
tests/auth/: test_route_auth.py
tests/comments/: test_repository_comments.py  test_route_comments.py
tests/hashtags/: test_repository_hashtags.py  test_route_hashtags.py
tests/posts/: test_repository_posts.py  test_route_posts.py
tests/rating/: test_repository_ratings.py  test_route_ratings.py
(+5 files in other folders)
